--- a/style.css
+++ b/style.css
@@ -254,10 +254,6 @@ i.ri-menu-3-line{
     align-items: center;
 } 
 
-.footsq{
-    
-}
-
 .footsq>h1{
     font-size: 3vmax;
     font-weight: 500;
@@ -268,3 +264,82 @@ i.ri-menu-3-line{
     font-weight: 500;
     text-align: center;
 }
+
+/* ----------------------page-2---------------------- */
+
+#page{
+    height: 100vh;
+    width: 100vw;
+}
+.rectangle{
+    height: 47vw;
+    max-width: 89vw;
+    width: 100%;
+    margin: 5.5vw auto;
+    padding: 4vw;
+    gap: 14vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.left-square{
+    height: 37vw;
+    width: 33.3vw;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 1.5vw;
+    padding: 6vmax 0vmax;
+}
+.left-square>h1{
+    font: 3vmax;
+    font-weight: 500;
+}
+.left-square>.bullet{
+    font: 1.5vmax;
+    font-weight: 500;
+    line-height: 2vmax;
+}
+
+.right-square{
+    height: 37vw;
+    width: 33.3vw;
+    flex: 1;
+    position: relative;
+    z-index: 1;
+}
+
+.right-square>img{
+    max-width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 4vmax;
+    right: 4vmax;
+    top: 0vmax;
+    bottom: 0vmax;
+
+}
+.right-square>#l-svg{
+    position: absolute;
+    max-width: 100%;
+    height: auto;
+    left: 2.66vmax;
+    top: 16.5vmax;
+
+    
+}
+.right-square>#r-svg{
+    max-width: 100%;
+    position: absolute;
+    top: 10.8vmax;
+    right: 8vmax;
+    
+}
+@media screen and (max-width: 600px) {
+    .rectangle {
+        flex-direction: column; /* Stack squares vertically */
+        align-items: center; /* Center the squares vertically */
+    }
+}
+
+
