--- a/style.css
+++ b/style.css
@@ -267,56 +267,56 @@ i.ri-menu-3-line{
 
 /* ----------------------page-2---------------------- */
 
-#page{
-    height: 100vh;
-    width: 100vw;
+#page2{
+    position: relative;
+   
 }
 .rectangle{
-    height: 47vw;
-    max-width: 89vw;
-    width: 100%;
-    margin: 5.5vw auto;
-    padding: 4vw;
-    gap: 14vw;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+    align-items: center;
     justify-content: center;
+    gap: 14vw;
+    padding: 4vmin;
+    z-index: 9;
 }
 .left-square{
-    height: 37vw;
-    width: 33.3vw;
+    height: 37vmax;
+    width: 33.3vmax;
     display: flex;
     flex-direction: column;
-    flex: 1;
     gap: 1.5vw;
-    padding: 6vmax 0vmax;
+    justify-content: center;
+    z-index: 9;
+    
 }
 .left-square>h1{
     font: 3vmax;
     font-weight: 500;
+    z-index: 9;
 }
 .left-square>.bullet{
     font: 1.5vmax;
     font-weight: 500;
     line-height: 2vmax;
+    z-index: 9;
 }
 
 .right-square{
-    height: 37vw;
-    width: 33.3vw;
-    flex: 1;
+    height: 37vmax;
+    width: 33.3vmax;
     position: relative;
-    z-index: 1;
+    z-index: 9;
 }
 
 .right-square>img{
-    max-width: 100%;
     height: 100%;
     position: absolute;
     left: 4vmax;
     right: 4vmax;
     top: 0vmax;
     bottom: 0vmax;
+    z-index: 9;
 
 }
 .right-square>#l-svg{
@@ -325,6 +325,7 @@ i.ri-menu-3-line{
     height: auto;
     left: 2.66vmax;
     top: 16.5vmax;
+    z-index: 9;
 
     
 }
@@ -333,13 +334,14 @@ i.ri-menu-3-line{
     position: absolute;
     top: 10.8vmax;
     right: 8vmax;
+    z-index: 9;
     
 }
-@media screen and (max-width: 600px) {
-    .rectangle {
-        flex-direction: column; /* Stack squares vertically */
-        align-items: center; /* Center the squares vertically */
-    }
-}
 
+#bg-svg{
+    position: absolute;
+    top: 27.5vmax;
+    left: 0vmax;
+    z-index: 0;
+}
 
