--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html,body{
     background-color: #F7E3EA;
     position: relative;
     overflow: hidden;
+    z-index: -2;
 }
 #page{
     height: 100vh;
@@ -296,7 +297,7 @@ i.ri-menu-3-line{
     z-index: 9;
 }
 .left-square>.bullet{
-    font: 1.5vmax;
+    font: 1.2vmax;
     font-weight: 500;
     line-height: 2vmax;
     z-index: 9;
@@ -342,6 +343,170 @@ i.ri-menu-3-line{
     position: absolute;
     top: 27.5vmax;
     left: 0vmax;
-    z-index: 0;
+    z-index: -1;
+}
+/* ------------------------company-sec---------------- */
+
+.sec-3{
+    width: 70vw;
+    height: 13vw;
+    display: flex;
+    flex-direction: column;
+    margin: 7.2vw 15vw;
+    gap: 1.5vmax;
 }
 
+
+.sec-3-up>h1{
+    font-size: 3vmax;
+    font-weight: 500;
+    text-align: center;
+}
+.sec-3-down{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(128, 126, 120, 0.16);
+    padding-bottom: 2.3vmax;
+}
+
+.sec-3-down-left>h3{
+    font-size: 1.25vmax;
+    font-weight: 500;
+}
+.sec-3-down-left>h5{
+    font-size: 0.8vmax;
+    font-weight: 800;   
+}
+.sec-4{
+    display: flex;
+    flex-direction: column;
+    margin: 12vmax 5.5vmax;
+    gap: 2.5vmax;
+    justify-content: center;
+}
+.sec-4-up > p{
+    font-size: 1.25vmax;
+    font-weight: 500;
+    text-align: center;
+}
+
+.sec-4-down{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3vmax;
+    justify-content: center;
+}
+/* -------------------------------sec-5--------------------------- */
+
+.sec-5{
+    display: flex;
+    flex-direction: column;
+    gap: 5.7vmax;
+    margin: 13vmax 5.7vmax;
+}
+
+.sec-5-up>svg{
+    margin-left: 1vw;
+}
+.sec-5-down{
+    display: flex;
+    gap: 5vmax;
+    flex-wrap: wrap;
+   justify-content: space-around;
+}
+/* Add your desired styles for the grid items and container here */
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 7 columns */
+    grid-template-rows: repeat(7, 1fr); /* 5 rows */
+    row-gap: 0.8vw;
+    column-gap: 1vw;
+}
+.grid-item{
+    font-size: 0.9vmax;
+    font-weight: 400;
+}
+.bold{
+    font-size: 1vmax;
+    font-weight: 500;
+}
+.sec-5-down-right{
+    display: flex;
+    flex-direction: column;
+    gap: 1vmax;
+}
+.sec-5-down-right>h3{
+    font-size: 1vmax;
+    font-weight: 500;
+
+}
+.form {
+    position: relative;
+    display: inline-block;
+}
+
+input {
+    
+    height: 4.1vmax;
+    width: 27.2vmax;
+    border: 1px solid rgba(47, 47, 48, 1);
+    border-radius: 30px;
+    background-color: transparent;
+    
+    
+}
+input::placeholder{
+    font-size: 1.2vmax;
+    font-weight: 400;
+    transform: translateX(2.2vmax);
+    color: rgba(152, 153, 154, 1);
+}
+
+.circle {
+    position: absolute;
+    height: 4.1vmax;
+    width: 4.1vmax;
+    border: 1px solid #176AE5;
+    border-radius: 30px;
+    background-color: #176AE5;
+    right: 0vmax;
+}
+.circle>i{
+    color: #fff;
+    font-size: 1.2vmax;
+    font-weight: 200;
+}
+
+
+.sec-5-down-right>p{
+    font-size: 0.9vmax;
+    line-height: 1.2vmax;
+    font-weight: 400;
+    text-align: left;
+    width: 27vmax;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5.5vmax 4.1vmax;
+    border-top: 1px solid rgba(47, 47, 48, 1);
+    padding-top: 2.3vmax;
+}
+.foot-item{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1.1vmax;
+    font-size: 0.8vmax;
+    font-weight: 500;
+    color: rgba(47, 47, 48, 1);
+}
+.copy{
+    font-size: 0.8vmax;
+    font-weight: 400;
+    text-align: right;
+    line-height: 1.2vmax;
+    color: rgba(47, 47, 48, 1);
+}
